[project]
name = "code-review-env"
version = "0.1.0"
description = "AI Code Review Environment with reward-based evaluation"
authors = [
    {name = "Ishan Meduri"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "env.py"